<resources>
    <string name="app_name">AndroidJavaExample</string>
    <string name="btn_layout">Layouts</string>
    <string name="btn_button">Button</string>
    <string name="btn_text_view">Text View</string>
    <string name="btn_edit_text">Edit Text</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="text_type_here">Type here:</string>
    <string name="text_one">One</string>
    <string name="text_two">Two</string>
    <string name="text_three">Three</string>
    <string name="text_radio1">Radio1</string>
    <string name="text_radio2">Radio2</string>
    <string name="text_radio3">Radio3</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_switcher">Switch</string>
    <string name="text_view">TextView</string>
    <string name="text_login">Login</string>
    <string name="text_date">Date</string>
    <string name="btn_constraint_layout">Constraint Layout</string>
    <string name="btn_frame_layout">Frame Layout</string>
    <string name="btn_grid_layout">Grid Layout</string>
    <string name="btn_linear_layout">Linear Layout</string>
    <string name="btn_table_layout">Table Layout</string>
    <string name="btn_relative_layout">Relative Layout</string>
    <string name="btn_linear_horizontal_layout">Linear Horizontal Layout</string>
    <string name="btn_linear_vertical_layout">Linear Vertical Layout</string>
    <string name="btn_linear_layout_with_weight">Linear Layout With Weight</string>
    <string name="text_click_me">Click Me</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_number">Number</string>
    <string name="hint_model_auto">Model Auto</string>
    <string name="text_my_style_button">My Style Button</string>
    <string name="text_test">Test</string>
    <string name="text_registration">Registration</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_text_logout">Logout</string>
    <string name="btn_delete_user_profile">Delete user Profile</string>
    <string name="btn_destroy_base">Destroy base</string>
    <string name="text_my_happy_text">My Happy Text</string>
    <string name="text_click_me_now">Click Me Now!</string>
    <string name="text_valid_input_required">Valid Input Required</string>
    <string name="text_enter_first_name">Enter first name</string>
    <string name="text_enter_last_name">Enter last name</string>
    <string name="text_enter_phone">Enter phone</string>
    <string name="text_enter_login">Enter login</string>
    <string name="text_enter_password">Enter password</string>
    <string name="text_passwords_not_equals">Passwords not equals</string>
    <string name="text_user_registered">User already registered, sign in</string>
    <string name="text_registration_user">registration_user</string>
    <string name="text_user_not_registered">User is not registered</string>
    <string name="text_base_deleted">Base Deleted!</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Developer</string>
    <string name="nav_header_subtitle">vinsergey81@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_toggle_button">ToggleButton</string>
    <string name="text_enabled">ENABLED</string>
    <string name="light_theme">Ligth Theme</string>
    <string name="dark_theme">Dark Theme</string>
</resources>
