<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".Layouts.LayoutsActivity"
            android:orientation="vertical"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btn_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_constraint_layout" />
        <Button
            android:id="@+id/btn_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_frame_layout" />
        <Button
            android:id="@+id/btn_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_grid_layout" />
        <Button
            android:id="@+id/btn_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_linear_layout" />
        <Button
            android:id="@+id/btn_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_relative_layout" />
        <Button
            android:id="@+id/btn_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_table_layout" />

    </LinearLayout>
</layout>