<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btn_layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_layout" />
        <Button
            android:id="@+id/btn_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_button" />
        <Button
            android:id="@+id/btn_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_view" />
        <Button
            android:id="@+id/btn_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit_text" />

    </LinearLayout>
</layout>