<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".Layouts.Linear.LinearLayoutsActivity">

    <Button
        android:id="@+id/btn_linear_horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_linear_horizontal_layout" />
    <Button
        android:id="@+id/btn_linear_vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_linear_vertical_layout" />
    <Button
        android:id="@+id/btn_linear_layout_with_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_linear_layout_with_weight" />

</LinearLayout>